# CParty

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt
documents/: alignment_gate_spec.md  can_pair_consistency_matrix.md  can_pair_rollout_report.md  constraint_rollout_report.md  fixed_energy_cli_alignment_report.md  fixed_energy_cli_baseline.md  fixed_energy_cli_mismatch_analysis.md  fixed_energy_report.md  prd.json  rd.md  refactor_nonregression_checklist.md  scfg_fixed_structure_parsing_pseudocode.md
documents/archive/: README.md  prd_legacy_20260212.json  rd_legacy_20260212.md
documents/ralph-loop/: prd.json  progress.txt  rprompt.md
documents/ralph-loop/audit/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  015.md  016.md  017.md  018.md  019.md  020.md  TEMPLATE.md
ralph-loop/: ralph.sh
src/: CParty.cc  CPartyAPI.cc  CPartyAPI.hh  CPartyAPI_globals.cc  can_pair_policy.cc  can_pair_policy.hh  energy_eval_context.hh  fixed_energy_api.cc  fixed_energy_api.hh  fixed_energy_breakdown.hh  fixed_structure_energy_internal.cc  fixed_structure_energy_internal.hh  h_globals.hh  part_func.cc  part_func.hh  part_func_can_pair.cc  part_func_can_pair.hh  pseudo_loop.cc  pseudo_loop.hh  pseudo_loop_can_pair.cc  pseudo_loop_can_pair.hh
src/scfg/: constraint_oracle.cc  constraint_oracle.hh  core.cc  core.hh  legacy_adapter.cc  legacy_adapter.hh  part_func_adapter.cc  part_func_adapter.hh  rules_part_func.cc  rules_part_func.hh  rules_pseudo_loop.cc  rules_pseudo_loop.hh
test/: README.md  api_cli_density2_energy_alignment_test.cc  api_structure_energy_validation_test.cc  can_pair_policy_test.cc  fixed_energy_breakdown_test.cc  fixed_energy_cli_mfe_energy_alignment_test.cc  fixed_energy_internal_test.cc  fixed_energy_rollout_plan_test.cc  fixed_energy_slice_a_test.cc  fixed_energy_slice_b_test.cc  fixed_energy_slice_c_test.cc  fixed_energy_slice_d_test.cc  multi.secstruct  multi_secstruct_schema_test.cc
test/baselines/fixed_energy_cli/: density2_mfe.tsv  density2_mfe_large.tsv
test/fixtures/: seed_from_multi_secstruct.tsv
test/tools/: build_density2_cli_baseline.sh  gen_random_seq_struct.py  gen_random_seq_struct_test.sh  parse_cparty_stdout.sh  parse_cparty_stdout_test.sh
tests/: api_cli_density2_energy_alignment_test.cc  api_structure_energy_cli_state_guard_test.cc  api_structure_energy_compat_test.cc  api_structure_energy_decl_test.cc  api_structure_energy_h_type_test.cc  api_structure_energy_k_type_test.cc  api_structure_energy_pkfree_test.cc  api_structure_energy_validation_test.cc  can_pair_cross_path_consistency_test.cc  can_pair_policy_test.cc  can_pair_rollout_e2e.sh  fixed_energy_breakdown_test.cc  fixed_energy_cli_baseline.sh  fixed_energy_e2e_test.cc  fixed_energy_fixtures.sh  fixed_energy_internal_test.cc  part_func_can_pair_integration_test.cc  part_func_refactor_phase2_test.cc  pseudo_loop_can_pair_integration_test.cc  pseudo_loop_refactor_phase2_test.cc  regression_matrix.sh  test.multi.fa
tests/baselines/fixed_energy_cli/: density2_mfe.tsv
tests/baselines/regression/: README.md  r0_p0_k0_d0.txt  r0_p0_k0_d1.txt  r0_p0_k1_d0.txt  r0_p0_k1_d1.txt  r0_p1_k0_d0.txt  r0_p1_k0_d1.txt  r1_p0_k0_d0.txt  r1_p0_k0_d1.txt  r1_p0_k1_d1.txt
tests/cparty_fixed_structure_energy/: README.md  fixtures.tsv  test.multi.fa
